--- a/src/pcc/ApigatorBundle/Resources/views/Default/index.html.twig
+++ b/src/pcc/ApigatorBundle/Resources/views/Default/index.html.twig
@@ -4,13 +4,20 @@
 {% block body %}
     <div class="description">
         <h1>ApiGatorBundle</h1> ofrece un servicio de cliente genérico para APIs REST <br>
-        Usando el cliente más <h2>C00RL</h2>
+        Usando el cliente más <h2><a href="http://php.net/manual/es/book.curl.php">C00RL</a></h2>
 
 
+        <div class="enlaces">
+            <ul>
+                <li>
+                    <a href="https://github.com/Passhico/ApigatorBundle">Abrir en YITJAP</a>
+                </li>
+                <li>
+                    <a href="{{ path('pcc_apigator_test_open_weather_map') }}">Test a :  api.openweathermap.org</a>
+                </li>
+            </ul>
+        </div>
     </div>
-    <a href="https://github.com/Passhico/ApigatorBundle">Abrir en YITJAP</a>
-
-    <a href="{{ path('pcc_apigator_test_open_weather_map') }}">Test a :  api.openweathermap.org</a>
 {% endblock body %}
 
 
@@ -30,12 +37,16 @@
             font-size: smaller;
         }
         a {
-           background-color: darkgreen;
+            align-self: center;
+           background-color: darkgoldenrod;
             color: black;
             border: black;
         }
         body {
             background-color: dimgrey;
+        }
+        div.enlaces {
+            align-self: center;
         }
 
     </style>
