creado directorio MappedModelFromDoctrine y añadido README que explica para lo que se usa.
En este directorio se guardará al mapeado intermedio que se necesita para generar las
entidades en el ORM importando desde una base de datos con bin/console doctrine:mapping:convert

 //MAPEAMOS
 ./console doctrine:mapping:convert xml {ESTE DIRECTORIO} --from-database -f

 //IMPORTAMOS
  ./console doctrine:mapping:import BlogBundle yml

 //GENERAMOS ENTIDADES.
 ./console doctrine:generate:entities BlogBundle

--- a/src/pcc/WebBundle/Resources/views/Default/index.html.twig
+++ b/src/pcc/WebBundle/Resources/views/Default/index.html.twig
@@ -4,5 +4,18 @@
 {% endblock title %}
 
 {% block body %}
-    La temperatura de {{ ciudad }} ahora mismo es {{ temperatura }}
+    <li class="salida_api"> La temperatura de {{ ciudad }} ahora mismo es {{ temperatura }} </li>
+{% endblock %}
+
+{% block stylesheets %}
+    <style>
+        body {
+            background-color: dimgrey;
+        }
+        li.salida_api {
+            background-color: black;
+            color: #6b9311;
+        }
+    </style>
+
 {% endblock %}
