add pcc_web_get_all_cities_from_doctrine y mejor renderizamos la meassure entera.

--- a/src/pcc/WebBundle/Resources/views/Default/renderTemperature.html.twig
+++ b/src/pcc/WebBundle/Resources/views/Default/renderTemperature.html.twig
@@ -1,7 +1,7 @@
 {% extends '::base.html.twig' %}
 
 {% block body %}
-    <li class="temperatura"> La temperatura de {{ ciudad }} es ahora mismo de {{ temperatura }} grados Centígrados. </li>
+    <li class="temperatura"> Los datos obtenidos  de {{ ciudad }} son:  es ahora mismo de {{ dump(meassures) }}</li>
 {% endblock %}
 
 {% block stylesheets %}
